Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11714

iOS Simulator not starting with XCode 5.1

XMLWordPrintable

    • 9c17e9cb72f98b17389d245725629b44bdcde3a4

      Xcode 5.1 renamed the framework to talk to the simulator from iPhoneSimulatorRemoteClient to DVTiPhoneSimulatorRemoteClient and changed the API.
      As consequence the iossim tool and the simulator integration were broken.

      For Creator 3.0.x you can download the binary that patches it from the attachments.

        For Gerrit Dashboard: QTCREATORBUG-11714
        # Subject Branch Project Status CR V

            fawzi Fawzi Mohamed
            ttt Tuukka Turunen
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes