src/tools/3rdparty/iossim_1_8_2/nsprintf.mm
@@ -24,7 +24,7 @@ int nsfprintf (FILE *stream, NSString *format, ...) {
     va_start(ap, format);
     {
         retval = nsvfprintf(stream, format, ap);
-    } 
+    }
     va_end(ap);
 
     return retval;
@@ -37,7 +37,7 @@ int nsprintf (NSString *format, ...) {
     va_start(ap, format);
     {
         retval = nsvfprintf(stdout, format, ap);
-    } 
+    }
     va_end(ap);
 
     return retval;
